--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -5,7 +5,7 @@
 	<body>
 		<div>
 			<a href="/">Home</a> | 
-			<a href="/release/add">Add New Release</a> | 
+			<a href="/releases/add">Add New Release</a> | 
 			<a href="/releases">All Releases List</a>
 		</div>	
 		<h1><%= title %></h1>
